--- a/views/hostarPage/HomePage.ejs
+++ b/views/hostarPage/HomePage.ejs
@@ -56,7 +56,7 @@
               <div class="container">
                 <h4>Popular Movies</h4>
                 <button class="nav-button prev" id="prevBtn">&#8249;</button>
-                <a href="http://localhost:8080/hostar/home/allListings">View all<i class="fa-solid fa-angle-right"></i></a>
+                <a href="/hostar/home/allListings">View all<i class="fa-solid fa-angle-right"></i></a>
                 <div class="cards-container cardsContainer" id="cardsContainer">
                       <%for(let d of data){%>
                         <%if(d.type=="movie"){%>
@@ -77,7 +77,7 @@
               <div class="container">
                 <h4>Best In Sports</h4>
                 <button class="nav-button prev" id="prevBtn">&#8249;</button>
-                <a href="http://localhost:8080/hostar/home/allListings">View all<i class="fa-solid fa-angle-right"></i></a>
+                <a href="/hostar/home/allListings">View all<i class="fa-solid fa-angle-right"></i></a>
                 <div class="cards-container cardsContainer" id="cardsContainer">
                   <!-- Cards -->
                         <%for(let d of data){%>
@@ -99,7 +99,7 @@
               <div class="container">
                 <h4>Comedy Movies</h4>
                 <button class="nav-button prev" id="prevBtn">&#8249;</button>
-                <a href="http://localhost:8080/hostar/home/allListings">View all<i class="fa-solid fa-angle-right"></i></a>
+                <a href="/hostar/home/allListings">View all<i class="fa-solid fa-angle-right"></i></a>
                 <div class="cards-container cardsContainer" id="cardsContainer">
                   <!-- Cards -->
                         <%for(let d of data){%>
@@ -121,7 +121,7 @@
               <div class="container lastdiv">
                 <h4>South Movies</h4>
                 <button class="nav-button prev" id="prevBtn">&#8249;</button>
-                <a href="http://localhost:8080/hostar/home/allListings">View all</a>
+                <a href="/hostar/home/allListings">View all</a>
                 <div class="cards-container cardsContainer" id="cardsContainer">
                   <!-- Cards -->
                         <%for(let d of data){%>
