--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -5,7 +5,7 @@
   </div>
   <div class="icons">
     <div><i class="fa-regular fa-circle-user"></i></div>
-    <div onclick="window.location.href='//localhost:8080/hostar/home/search'" style="cursor: pointer;">
+    <div onclick="window.location.href='/hostar/home/search'" style="cursor: pointer;">
       <i class="fa-solid fa-magnifying-glass"></i>
     </div>
     <div><i class="fa-solid fa-house"></i></div>
