--- a/views/hostarPage/allListings.ejs
+++ b/views/hostarPage/allListings.ejs
@@ -7,8 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://localhost:8080/css/style.css">
-    <link rel="stylesheet" href="http://localhost:8080/css/style2.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style2.css">
     
 </head>
      <style>
