--- a/views/hostarPage/searchPage.ejs
+++ b/views/hostarPage/searchPage.ejs
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/style2.css">
+  <link rel="stylesheet" href="https://hostar.onrender.com/css/style.css">
+  <link rel="stylesheet" href="https://hostar.onrender.com/css/style2.css">
   <title>Search Page</title>
   <style>
       .heading{
