--- a/views/form/inserdata.ejs
+++ b/views/form/inserdata.ejs
@@ -15,12 +15,12 @@
       <form method="post" action="/hostar/listing/add" id="dataForm" novalidate class="needs-validation">
         <div class="mb-3">
             <label class="form-label" for="type">Category</label>
-            <input type="text" name="type" placeholder="like : Sport/movie/comedy movie/south movie" class="form-control"  required>
+            <input type="text" name="type" placeholder="like : Sport/Movie/Comedy Movie/South Movie" class="form-control"  required>
             <div class="invalid-feedback">Please enter valid category</div>
         </div>
         <div class="mb-3">
             <label class="form-label" for="title">Title</label>
-            <input type="text" name="title" placeholder="add catchy title" class="form-control"  required>
+            <input type="text" name="title" placeholder="add title" class="form-control"  required>
             <div class="invalid-feedback">Please enter valid title</div>
         </div>
                 
