--- a/views/form/updatedata.ejs
+++ b/views/form/updatedata.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
-    <title>Add data form</title>
+    <title>Update data form</title>
 </head>
 <body>
     <div class="row mt-3">
