--- a/views/hostarPage/searchPage.ejs
+++ b/views/hostarPage/searchPage.ejs
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://hostar.onrender.com/css/style.css">
   <link rel="stylesheet" href="https://hostar.onrender.com/css/style2.css">
-  <title>Search Page</title>
+  <title>Hostar Search Page</title>
   <style>
       .heading{
         font-size: 1.5rem;
