--- a/views/hostarPage/HomePage.ejs
+++ b/views/hostarPage/HomePage.ejs
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
     rel="stylesheet">
-    <link rel="icon" href="/hostarLogo.png">
+    <link rel="icon" href="/disney.png">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -66,6 +66,7 @@
                             <h3><%=d.title%></h3>
                             <p><%=d.description%></p>
                           </div>
+                          <a href="/hostar/listing/<%=d.id%>/update" class="btn btn-light update">Update</a>
                         </div>
                         <%}%>
                       <%}%>
@@ -88,6 +89,7 @@
                               <h3><%=d.title%></h3>
                               <p><%=d.description%></p>
                             </div>
+                            <a href="/hostar/listing/<%=d.id%>/update" class="btn btn-light update">Update</a>
                           </div>
                           <%}%>
                         <%}%>
@@ -110,6 +112,7 @@
                               <h3><%=d.title%></h3>
                               <p><%=d.description%></p>
                             </div>
+                            <a href="/hostar/listing/<%=d.id%>/update" class="btn btn-light update">Update</a>
                           </div>
                         <%}%>
                         <%}%>
@@ -132,6 +135,7 @@
                               <h3><%=d.title%></h3>
                               <p><%=d.description%></p>
                             </div>
+                            <a href="/hostar/listing/<%=d.id%>/update" class="btn btn-light update">Update</a>
                           </div>
                         <%}%>
                         <%}%>
