--- a/views/hostarPage/allListings.ejs
+++ b/views/hostarPage/allListings.ejs
@@ -29,6 +29,7 @@
                             <h3><%=d.title%></h3>
                             <p><%=d.description%></p>
                         </div>
+                        <a href="/hostar/listing/<%=d.id%>/update" class="btn btn-light update">Update</a>
                     </div>
                     <%}%> 
             </div>
