--- a/views/hostarPage/searchPage.ejs
+++ b/views/hostarPage/searchPage.ejs
@@ -33,6 +33,7 @@
             <%=d.description%>
           </p>
         </div>
+        <a href="/hostar/listing/<%=d.id%>/update" class="btn btn-light update">Update</a>
       </div>
       <%}%>
   </div>
