--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -8,9 +8,13 @@
     <div onclick="window.location.href='/hostar/home/search'" style="cursor: pointer;">
       <i class="fa-solid fa-magnifying-glass"></i>
     </div>
-    <div><i class="fa-solid fa-house"></i></div>
+    <div onclick="window.location.href='/hostar/home'">
+      <i class="fa-solid fa-house"></i>
+    </div>
     <div><i class="fa-solid fa-tv"></i></div>
-    <div><i class="fa-solid fa-folder-closed"></i></div>
+    <div onclick="window.location.href='/hostar/listing/add'">
+      <i class="fa-solid fa-folder-closed"></i>
+    </div>
     <div><i class="fa-solid fa-volleyball"></i></div>
     <div><i class="fa-solid fa-table-list"></i></div>
   </div>
