--- a/views/form/inserdata.ejs
+++ b/views/form/inserdata.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
     <title>Add data form</title>
@@ -10,12 +11,18 @@
 <body>
     <div class="row mt-3">
      <div class="col-8 offset-2">
+        <a href='https://hostar.onrender.com/hostar/home'><i class="fa-solid fa-arrow-left"></i></a>
         <br><br>
         <h3>Create a new listing</h3>
-      <form method="post" action="/hostar/listing/add" id="dataForm" novalidate class="needs-validation">
+      <form method="post" action="/hostar/listing/add" id="dataForm" novalidate class="needs-validation" enctype="multipart/form-data">
         <div class="mb-3">
             <label class="form-label" for="type">Category</label>
-            <input type="text" name="type" placeholder="like : Sport/Movie/Comedy Movie/South Movie" class="form-control"  required>
+            <select name="type" id="type" class="form-select">
+                <option value="Movie">Movie</option>
+                <option value="Sport">Sport</option>
+                <option value="Comedy Movie">Comedy Movie</option>
+                <option value="South Movie">South Movie</option>
+            </select>
             <div class="invalid-feedback">Please enter valid category</div>
         </div>
         <div class="mb-3">
@@ -30,9 +37,9 @@
             <div class="invalid-feedback">Please enter short description</div>
         </div>
         <div class="mb-3">
-            <label class="form-label" for="poster.url">Upload Image URL</label>
-            <input type="url" name="poster.url" class="form-control" required>
-            <div class="invalid-feedback">Please enter Image URL</div>
+            <label class="form-label" for="poster">Upload Image</label>
+            <input type="file" name="poster" class="form-control" required>
+            <div class="invalid-feedback">Please enter Image</div>
         </div>
         <div class="mb-3">
             <label class="form-label" for="video">Upload Video URL</label>
