--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -20,8 +20,8 @@
     <div class="container-fluid">
       <form class="d-flex">
         <input class="form-control me-2 search-inp" type="search" name="movie" placeholder="Movies, Show and More">
-        <button class="btn btn-dark search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search
-        </button>
+        <!-- <button class="btn btn-dark search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search -->
+        <!-- </button> -->
       </form>
     </div>
   </nav>
