--- a/views/form/inserdata.ejs
+++ b/views/form/inserdata.ejs
@@ -17,7 +17,7 @@
       <form method="post" action="/hostar/listing/add" id="dataForm" novalidate class="needs-validation" enctype="multipart/form-data">
         <div class="mb-3">
             <label class="form-label" for="type">Category</label>
-            <select name="type" id="type" class="form-select">
+            <select name="type" id="type" class="form-select" required>
                 <option value="Movie">Movie</option>
                 <option value="Sport">Sport</option>
                 <option value="Comedy Movie">Comedy Movie</option>
