--- a/views/form/inserdata.ejs
+++ b/views/form/inserdata.ejs
@@ -43,7 +43,7 @@
         </div>
         <div class="mb-3">
             <label class="form-label" for="video">Upload Video URL</label>
-            <input type="url" name="video.url" class="form-control" required>
+            <input type="file" name="video" class="form-control" required>
             <div class="invalid-feedback">Please enter Video URL</div>
         </div>
         <button class="btn btn-dark add-btn mt-3">Add</button>
