--- a/views/form/updatedata.ejs
+++ b/views/form/updatedata.ejs
@@ -17,7 +17,7 @@
       <form method="post" action="/hostar/listing/<%=data.id%>/update?_method=put" id="dataForm" novalidate class="needs-validation" enctype="multipart/form-data">
         <div class="mb-3">
             <label class="form-label" for="type">Category</label>
-            <select name="type" id="type" class="form-select">
+            <select name="type" id="type" class="form-select" required>
                 <option value="<%=data.type%>"><%=data.type%></option>
                 <option value="Movie">Movie</option>
                 <option value="Sport">Sport</option>
@@ -27,13 +27,13 @@
         </div>
         <div class="mb-3">
             <label class="form-label" for="title">Title</label>
-            <input type="text" name="title" placeholder="add catchy title" class="form-control" value="<%=data.title%>">
+            <input type="text" name="title" placeholder="add catchy title" class="form-control" value="<%=data.title%>" required>
             <div class="invalid-feedback">Please enter valid title</div>
         </div>
                 
         <div class="mb-3">
             <label class="form-label" for="description">Description</label>
-            <textarea type="text" name="description" class="form-control"><%=data.description%></textarea>
+            <textarea type="text" name="description" class="form-control" required><%=data.description%></textarea>
             <div class="invalid-feedback">Please enter short description</div>
         </div>
         <div class="mb-3">
@@ -47,7 +47,7 @@
         </div>
         <div class="mb-3">
             <label class="form-label" for="video">Upload Video URL</label>
-            <input type="url" name="video.url" class="form-control" value="<%=data.video.url%>">
+            <input type="file" name="video" class="form-control" value="<%=data.video.url%>">
             <div class="invalid-feedback">Please enter Video URL</div>
         </div>
         <button class="btn btn-dark add-btn mt-3">Add</button>
