--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -90,6 +90,10 @@ input[type="search"]::placeholder{
     height: auto;
     margin-bottom: 25%;
   }
+  .smallcard:hover {
+  /* margin-left: 10px; */
+  transform: scale(1);
+}
 
   /* navbar */
   .navbar{
